# ls-color

./: AUTHORS  Makefile.am  README  README.md  README.org  configure.ac
src/: Makefile.am  cmd.c  cmd.h  colorize.c  colorize.h  config.h  date.c  date.h  ls-color.c  ls-color.h  util.c  util.h
